--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,6 +3,8 @@
 <%- include('../partials/header') %>
 <body>
     <%- include('../partials/navbar') %>
+	<%- include('../partials/query') %>
     <%- include('../partials/footer') %>
+	
 </body>
 </html>
