database connection attempt 2

--- a/views/partials/query.ejs
+++ b/views/partials/query.ejs
@@ -1,3 +1,4 @@
+<script>
 const { Pool, Client } = require("pg");
 
 const pool = new Pool({
@@ -12,3 +13,4 @@ pool.query("SELECT * from Team", (err, res) => {
   console.log(err, res);
   pool.end();
 });
+</script>
