Database connection work

--- a/views/partials/query.ejs
+++ b/views/partials/query.ejs
@@ -1,6 +1,6 @@
 <script>
 const { Pool, Client } = require("pg");
-
+console.log("WTF");
 const pool = new Pool({
   user: "bhfalumqxfcmdc",
   host: "ec2-54-164-241-193.compute-1.amazonaws.com",
